tests/agl/rejections/parse/positional_after_named.agl
def f(x: int, y: int) -> int = x + y
f(y = 2, 1)
